--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,25 +1,7 @@
-<div class="container" ng-controller="MainCtrl as main">
-    <h2>My todos</h2>
+<h1>Allsop Admin Portal</h1>
 
-    <!-- todos input -->
-    <form role="form" ng-submit="main.addTodo()">
-        <div class="row">
-            <div class="input-group">
-                <input type="text" ng-model="main.todo" placeholder="What needs to be done?" class="form-control">
-                <span class="input-group-btn">
-                    <input type="submit" class="btn btn-primary" value="Add">
-                </span>
-            </div>
-        </div>
-    </form>
-
-    <br>
-    <div ui-sortable ng-model="main.todos">
-        <p class="input-group" ng-repeat="todo in main.todos track by $index" style="padding:5px 10px; cursor: move;">
-            <input type="text" ng-model="todo" class="form-control">
-            <span class="input-group-btn">
-                <button class="btn btn-danger" ng-click="main.removeTodo($index)" aria-label="Remove">X</button>
-            </span>
-        </p>
-    </div>
-</div>
+<p>From here you can:</p>
+<ul>
+    <li>Update current auctions</li>
+    <li>Send push notificaions</li>
+</ul>
