--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,9 @@
-<h1>Allsop Admin Portal</h1>
+<h1 class="jumbotron">Allsop Admin Portal</h1>
 
-<p>From here you can:</p>
-<ul>
-    <li>Update current auctions</li>
-    <li>Send push notificaions</li>
-</ul>
+<div class="container">
+    <p>From here you can:</p>
+    <ul>
+        <li>Update current auctions</li>
+        <li>Send push notificaions</li>
+    </ul>
+</div>
