--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<h1 class="jumbotron">Allsop Admin Portal</h1>
+<h1 class="jumbotron" id="magenta">Allsop Admin Portal</h1>
 
 <div class="container">
     <p>From here you can:</p>
