--- a/app/views/auctions.html
+++ b/app/views/auctions.html
@@ -26,7 +26,7 @@
                 <div class="input-group" style="width:100%">
                     <div class="input-group-addon" style="width:5em">Time</div>
                     <input id="time" type="text" ng-model="newEntry.time" placeholder="Time" class="form-control" ng-init="newEntry.time = '10:30'"
-                    minlength="5" maxlength="5" required>
+                    minlength="5" maxlength="5" required ng-pattern="auctions.regex">
                 </div>
 
                 <div class="input-group" style="width:100%">
