Added error message on login and success message on push sent

--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -40,3 +40,15 @@ body {
 #auc-list input {
     background-color: #fff;
 }
+
+#error-message {
+    font-weight: bold;
+    color: darkred;
+    text-align: center;
+}
+
+#success-message {
+    font-weight: bold;
+    color: green;
+    text-align: center;
+}
