--- a/app/views/login.html
+++ b/app/views/login.html
@@ -14,6 +14,8 @@
 
         </div>
         <button type="submit" class="btn btn-primary" ng-disabled="!loginForm.$valid">Submit</button>
+
+        <p id="error-message" class="bg-danger">{{login.errorMsg}}</p>
     </form>
 
 </div>
