--- a/app/views/login.html
+++ b/app/views/login.html
@@ -15,7 +15,7 @@
         </div>
         <button type="submit" class="btn btn-primary" ng-disabled="!loginForm.$valid">Submit</button>
 
-        <p id="error-message" class="bg-danger">{{login.errorMsg}}</p>
+        <!--<p id="error-message" class="bg-danger">{{login.errorMsg}}</p>-->
     </form>
 
 </div>
