Added a list of registered devices on the notify page

--- a/app/views/notify.html
+++ b/app/views/notify.html
@@ -2,7 +2,8 @@
 
 <div class="container">
     <!--http://getbootstrap.com/css/#forms-->
-
+    <p id="primary-message" class="bg-primary">There are currently {{notify.userCount}} registered devices.</p>
+    
     <p id="success-message" ng-show="notify.notifySuccess" class="bg-success">Push sent!</p>
     <p id="error-message" ng-show="notify.notifyError" class="bg-danger">Push error!</p>
     <p id="warning-message" ng-show="notify.notifyWarning" class="bg-warning">Push sending...</p>
