--- a/app/styles/custom.css
+++ b/app/styles/custom.css
@@ -58,3 +58,9 @@ body {
     color: darkgoldenrod;
     text-align: center;
 }
+
+#primary-message {
+    font-weight: bold;
+    color: skyblue;
+    text-align: center;
+}
