--- a/app/views/notify.html
+++ b/app/views/notify.html
@@ -28,7 +28,7 @@
             <!--<th>Message ID</th>-->
         </tr>
 
-        <tr ng-repeat="message in notify.messages track by notify._id">
+        <tr ng-repeat="message in notify.messages track by notify.message_id">
             <!--// track by notify.message_id  | orderBy : '-timeStamp'"-->
             <td>{{ message.timeStamp }}</td>
             <td>{{ message.message }}</td>
